<resources>
    <string name="app_name">Test Review</string>

    <string name="menu_title">Main Menu</string>
    <string name="my_goals">Challenges</string>
    <string name="settings_title">Settings</string>
    <string name="stats_title">Stats</string>
    <string name="shop_title">Items</string>
    <string name="trophies_title">Trophies</string>
    <string name="games_title">Games</string>
    <string name="title_activity_submit">Submit</string>
    <string name="items_title">Items</string>
    <string name="quiz_title">Quiz</string>
    <string name="new_item">New Item</string>
    <string name="character">Pengu</string>

    <string name="button_locked">Locked</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
