<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">
    <!--tools:context="com.example.antepimentel.eng4000.MainMenu.MainMenu"-->

    <Button
        android:id="@+id/button8"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="12dp"
        android:drawableLeft="@drawable/character"
        android:text="@string/character"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/button4"
        android:drawableLeft="@drawable/items"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:text="@string/shop_title"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:layout_marginLeft="14dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button1"
        android:drawableLeft="@drawable/challenges"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="89dp"
        android:text="@string/my_goals"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/button2"
        android:drawableLeft="@drawable/games"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:text="@string/games_title"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:drawableLeft="@drawable/stats"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/stats_title"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:drawableLeft="@drawable/quiz"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="89dp"
        android:text="@string/quiz_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:drawableLeft="@drawable/star"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="12dp"
        android:text="@string/new_item"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

</android.support.constraint.ConstraintLayout>
